feat(api): add total commits
